--- a/bot/languages/es/domain.yml
+++ b/bot/languages/es/domain.yml
@@ -1115,7 +1115,7 @@
         - text: Múltiples variantes del COVID-19 están circulando alrededor del mundo. A día de hoy, hay once variantes de 
             SARS-CoV-2 identificadas y la OMS las divide en dos tipos:<br>
             1. variantes de preocupación (VOC) - Alpha, Beta, Gamma, Delta<br> 
-            2. variantes de interés (VOI) - Epsilon, Zeta, Eta, Theta, Lota, Kappa y Lambda.<br>
+            2. variantes de interés (VOI) - Epsilon, Zeta, Eta, Theta, Lota, Kappa y Lambda.<br><br>
             Para obtener más información sobre las variantes, visite el siguiente <a href='https://www.cdc.gov/coronavirus/2019-ncov/transmission/variant.html'target='_blank'>enlace</a>
           type: html
         - ssml: <speak>Múltiples variantes del COVID-19 están circulando alrededor del mundo. A día de hoy, hay once variantes de 
@@ -1131,6 +1131,14 @@
           type: html
         - ssml: <speak>En este momento, Delta es la variante predominante del virus, provoca más infecciones y se propaga más rápidamente que los primeros tipos del virus. Si necesita más información, visite el enlace.</speak>
           type: ssml
+        - options:
+          - label: Nuevos Variantes
+            value: nuevas cepas
+          - label: Síntomas
+            value: Síntomas
+          - label: Situación Mundial
+            value: Situación Mundial
+          type: hints
 
 
     utter_covid_no_country_current_statistics:
@@ -1521,6 +1529,14 @@
             Sin embargo, dado que las vacunas no son 100 % efectivas para prevenir la infección, algunas de las personas que están totalmente vacunadas se infectarán por COVID-19 de todos modos. 
             Las personas vacunadas que se infectan tienen menos probabilidades de sufrir enfermedades graves que quienes no están vacunados y se infectan por COVID-19.
           type: ssml
+        - options:
+          - label: Nuevas cepas
+            value: Nuevas cepas
+          - label: Vacunas
+            value: tenemos vacunas contra el covid
+          - label: Situación Mundial
+            value: Situación Mundial
+          type: hints
     utter_economy_consequences:
     - custom:
         answers:
@@ -2947,6 +2963,14 @@
             con una persona positiva con COVID-19 se sometan a la prueba de COVID-19. Además, hay otros casos en los que es necesario realizar pruebas. 
             Su regulación varía de un país a otro. Para estar al día de las últimas novedades, por favor consulte los sitios web de las autoridades de su país.</speak>
           type: ssml
+        - options:
+          - label: Medidas Preventivas
+            value: Medidas Preventivas
+          - label: Síntomas
+            value: Síntomas
+          - label: Transmisión
+            value: Transmisión
+          type: hints
     utter_travel_after:
     - custom:
         answers:
@@ -3120,18 +3144,26 @@
         answers:
         - text: Tanto la vacuna para COVID-19 de Pfizer-BioNTech como la vacuna
             de Moderna y de Johnson & Johnson se administrarán mediante una inyección en el músculo. La serie
-            de vacunación para la vacuna de Pfizer-BioNTech y Moderna es de 2 dosis administradas con 1 mes de diferencia. Si recibe
+            de vacunación para la vacuna de Pfizer-BioNTech y Moderna es de 2 dosis administradas con un mes de diferencia. Si recibe
             una dosis de una determinada vacuna, debe recibir una segunda dosis de esta
             misma vacuna un mes después para completar la serie de vacunación. La vacuna de Johnson & Johnson se administra en una sola dosis.
-            <ahref='https://www.cdc.gov/coronavirus/2019-ncov/vaccines/different-vaccines.html'target='_blank'>(1)</a>
+            <a href='https://www.cdc.gov/coronavirus/2019-ncov/vaccines/different-vaccines.html'target='_blank'>(1)</a>
           type: html
-        - ssml: <speak>Tanto la vacuna para COVID-19 de Pfizer-BioNTech como la vacuna
-            para COVID-19 de Moderna y de Johnson & Johnson se administrarán mediante una inyección en el músculo.
-            La serie de vacunación es de 2 dosis administradas con un mes de diferencia.
+        - ssml: <speak>Tanto la vacuna para COVID 19 de Pfizer-BioNTech como la vacuna
+            para COVID 19 de Moderna y de Johnson & Johnson se administrarán mediante una inyección en el músculo.
+            La serie de vacunación es de dos dosis administradas con un mes de diferencia.
             Si recibe una dosis de una determinada vacuna, debe recibir una segunda dosis
-            de esta misma vacuna un mes después para completar la serie de vacunación.  La vacuna de Johnson & Johnson se administra en una sola dosis.
+            de esta misma vacuna un mes después para completar la serie de vacunación.  La vacuna de Johnson se administra en una sola dosis.
             </speak>
           type: ssml
+        - options:
+          - label: Medidas Preventivas
+            value: Medidas Preventivas
+          - label: Nuevas cepas
+            value: Nuevas cepas
+          - label: Situación Mundial
+            value: Situación Mundial
+          type: hints
     utter_vaccine_con_covid:
     - custom:
         answers: 
@@ -3142,15 +3174,31 @@
             las personas sin síntomas también deben esperar hasta que reúnan los criterios para vacunarse. Esta pauta alcanza también a las personas que se enferman de COVID-19 antes de su segunda dosis de la vacuna.
             </speak>
           type: ssml
+        - options:
+          - label: Efectos secundarios
+            value: Efectos secundarios
+          - label: Vacunas
+            value: tenemos vacunas contra el covid
+          - label: Situación Mundial
+            value: Situación Mundial
+          type: hints
     utter_vaccine_after_covid:
     - custom:
         answers: 
         - text: Incluso si ya ha tenido la COVID-19, debe vacunarse cuando se lo ofrezcan. La protección que se obtiene al pasar la COVID-19 varía en cada persona y tampoco sabemos cuánto tiempo podría durar la inmunidad natural.<br>
-            <ahref='https://www.vacunacovid.gob.es/preguntas-y-respuestas/debo-vacunarme-si-ya-he-pasado-el-covid-19'target='_blank'>Más información</a>
+            <a href='https://www.vacunacovid.gob.es/preguntas-y-respuestas/debo-vacunarme-si-ya-he-pasado-el-covid-19'target='_blank'>Más información</a>
           type: html
         - ssml: <speak>Incluso si ya ha tenido la COVID-19, debe vacunarse cuando se lo ofrezcan. La protección que se obtiene al pasar la COVID-19 varía en cada persona y tampoco sabemos cuánto tiempo podría durar la inmunidad natural.
             </speak>
           type: ssml
+        - options:
+          - label: Efectos secundarios
+            value: Efectos secundarios
+          - label: Vacunas
+            value: tenemos vacunas contra el covid
+          - label: Situación Mundial
+            value: Situación Mundial
+          type: hints
     utter_vaccine_mix:
     - custom:
         answers:
@@ -3160,36 +3208,68 @@
         - ssml: <speak>En algunos países se están llevando a cabo ensayos clínicos para saber si se puede recibir una primera dosis de una vacuna y una segunda dosis de una vacuna diferente. 
             Aún no hay información suficiente para recomendar este tipo de combinación.</speak>
           type: ssml
+        - options:
+          - label: Nuevas cepas
+            value: Nuevas cepas
+          - label: Vacunas
+            value: tenemos vacunas contra el covid
+          - label: Situación Mundial
+            value: Situación Mundial
+          type: hints
     utter_vaccine_effectiveness:
     - custom:
-        answer:
-        - text: La vacuna Pfizer-BioNTech tiene un 95 % de eficacia según su estudio en el que participaron alrededor de 43.000 personas. La vacuna Moderna tiene un 94 % de eficacia según un estudio en el que participaron más de 30.000 
+        answers:
+        - text: La vacuna Pfizer-BioNTech tiene un 95 % de eficacia según su estudio en el que participaron alrededor de 43.000 personas. La vacuna Moderna tiene un 94 % de eficacia según un estudio en el que participaron más de 30.000 personas
             y la vacuna de Johnson & Johnson tuvo una efectividad del 66,3 % en ensayos clínicos.<br>
-            <ahref='https://espanol.cdc.gov/coronavirus/2019-ncov/vaccines/different-vaccines/how-they-work.html'target='_blank'>La eficacia de la vacuna</a>
+            <a href='https://espanol.cdc.gov/coronavirus/2019-ncov/vaccines/different-vaccines/how-they-work.html'target='_blank'>La eficacia de la vacuna</a>
           type: html
-        - ssml: <speak>La vacuna Pfizer-BioNTech tiene un 95 por cientos de eficacia según su estudio en el que participaron alrededor de 43000 personas. La vacuna Moderna tiene un 94 por cientos de eficacia según un estudio en el que participaron más de 30000 
+        - ssml: <speak>La vacuna Pfizer-BioNTech tiene un 95 por cientos de eficacia según su estudio en el que participaron alrededor de 43000 personas. La vacuna Moderna tiene un 94 por cientos de eficacia según un estudio en el que participaron más de 30000 personas
             y la vacuna de Johnson & Johnson tuvo una efectividad del 66,3 por cientos en ensayos clínicos.</speak>
           type: ssml
+        - options:
+          - label: Nuevas cepas
+            value: Nuevas cepas
+          - label: Vacunas
+            value: tenemos vacunas contra el covid
+          - label: Situación Mundial
+            value: Situación Mundial
+          type: hints
     utter_vaccine_side_effects:
     - custom:
-        answer:
+        answers:
         - text: "Como ocurre con cualquier otra vacuna, las vacunas contra la COVID-19 pueden causar efectos secundarios. La mayoría de las reacciones a las vacunas son leves y desaparecen espontáneamente a los pocos días.
             Entre ellos se incluyen: fiebre, cansancio, cefaleas, mialgias, escalofríos, diarrea y dolor en el lugar de inyección. Los efectos secundarios más graves o duraderos son sumamente infrecuentes.<br>
-            <ahref='https://www.who.int/es/news-room/q-a-detail/coronavirus-disease-(covid-19)-vaccines-safety'target='_blank'>Los efectos secundarios</a>"
+            <a href='https://www.who.int/es/news-room/q-a-detail/coronavirus-disease-(covid-19)-vaccines-safety'target='_blank'>Los efectos secundarios</a>"
           type: html
         - ssml: <speak>Como ocurre con cualquier otra vacuna, las vacunas contra la COVID-19 pueden causar efectos secundarios. La mayoría de las reacciones a las vacunas son leves y desaparecen espontáneamente a los pocos días.
             Entre ellos se incluyen fiebre, cansancio, cefaleas, mialgias, escalofríos, diarrea y dolor en el lugar de inyección. Los efectos secundarios más graves o duraderos son sumamente infrecuentes.</speak>
           type: ssml
+        - options:
+          - label: Seguridad de las vacunas
+            value: son las vacunas seguras
+          - label: Vacunas
+            value: tenemos vacunas contra el covid
+          - label: Situación Mundial
+            value: Situación Mundial
+          type: hints
     utter_vaccine_safety:
     - custom:
-        answer:
+        answers:
         - text: Se han establecido estrictas medidas de protección para garantizar que las vacunas contra la COVID-19 sean seguras. Antes de ser validadas por la OMS y por los organismos nacionales de reglamentación, 
             deben someterse a pruebas rigurosas en el marco de ensayos clínicos para demostrar que cumplen los criterios internacionalmente aceptados de eficacia y seguridad.<br>
-            <ahref='https://espanol.cdc.gov/coronavirus/2019-ncov/vaccines/safety/safety-of-vaccines.html'target='_blank'>Seguridad de las vacunas contra el COVID-19</a>"
+            <a href='https://espanol.cdc.gov/coronavirus/2019-ncov/vaccines/safety/safety-of-vaccines.html'target='_blank'>Seguridad de las vacunas contra el COVID-19</a>"
           type: html
         - ssml: <speak>Se han establecido estrictas medidas de protección para garantizar que las vacunas contra la COVID-19 sean seguras. Antes de ser validadas por la OMS y por los organismos nacionales de reglamentación, 
             deben someterse a pruebas rigurosas en el marco de ensayos clínicos para demostrar que cumplen los criterios internacionalmente aceptados de eficacia y seguridad.</speak>
           type: ssml
+        - options:
+          - label: Efectos secundarios
+            value: Efectos secundarios
+          - label: Vacunas
+            value: tenemos vacunas contra el covid
+          - label: Situación Mundial
+            value: Situación Mundial
+          type: hints
     utter_vaccine_ingredients:
     - custom:
         answers:
@@ -3197,7 +3277,7 @@
             COVID-19 de Moderna no contienen huevos, conservantes ni látex. Para obtener
             una lista completa de ingredientes, consulte la hoja informativa sobre vacunas
             que se proporciona a continuación:<br>
-            <ahref='https://www.cdc.gov/coronavirus/2019-ncov/vaccines/different-vaccines.html'target='_blank'>Los ingredientes de las vacunas</a>
+            <a href='https://www.cdc.gov/coronavirus/2019-ncov/vaccines/different-vaccines.html'target='_blank'>Los ingredientes de las vacunas</a>
           type: html
         - ssml: <speak>Tanto la vacuna para COVID-19 de Pfizer-BioNTech como la vacuna
             para COVID-19 de Moderna no contienen huevos, conservantes ni látex. Para
@@ -3226,7 +3306,7 @@
         answers:
         - text: La vacuna de Pfizer-BioNTech para COVID-19 es una vacuna que puede prevenir
             el COVID-19. La FDA ha autorizado el uso de emergencia de la vacuna para prevenir
-            el COVID-19 en personas de 16 años o más bajo la Autorización de Uso de Emergencia.<ahref='https://www.fda.gov/media/144414/download'target='_blank'>(1)</a>
+            el COVID-19 en personas de 16 años o más bajo la Autorización de Uso de Emergencia.<a href='https://www.fda.gov/media/144414/download'target='_blank'>(1)</a>
           type: html
         - ssml: <speak>La vacuna de Pfizer-BioNTech para COVID-19 es una vacuna que puede
             prevenir el COVID-19. La FDA ha autorizado el uso de emergencia de la vacuna
@@ -3243,7 +3323,7 @@
             cualquier vacuna que es autorizada o aprobada para su uso. La seguridad es
             la primer prioridad y hay muchas razones para ser vacunado:<ul><li>le ayudará
             a evitar infectarse de COVID-19; </li><li>es una manera más segura de generar
-            protección; </li><li>será una importante herramienta para detener la pandemia.<ahref='https://www.cdc.gov/coronavirus/2019-ncov/vaccines/vaccine-benefits.html'target='_blank'>(1)</a>
+            protección; </li><li>será una importante herramienta para detener la pandemia.<a href='https://www.cdc.gov/coronavirus/2019-ncov/vaccines/vaccine-benefits.html'target='_blank'>(1)</a>
           type: html
         - ssml: <speak>Es entendible que algunas personas puedan estar preocupadas por
             ser vacunadas ahora que las vacunas para el COVID-19 están disponibles. Mientras
@@ -3258,10 +3338,20 @@
     - custom:
         answers:
         - text: Ya se están utilizando varias vacunas. El primer programa de vacunación se puso en marcha a principios de diciembre 2020.<br>
-            Para más información, véase el siguiente <ahref='https://www.who.int/es/emergencies/diseases/novel-coronavirus-2019/question-and-answers-hub/q-a-detail/coronavirus-disease-(covid-19)-vaccines'target='_blank'>enlace</a>.
+            Para más información, véase el siguiente <a href='https://www.who.int/es/emergencies/diseases/novel-coronavirus-2019/question-and-answers-hub/q-a-detail/coronavirus-disease-(covid-19)-vaccines'target='_blank'>enlace</a>.
           type: html
         - ssml: <speak>Sí, ya se están utilizando varias vacunas. El primer programa de vacunación se puso en marcha a principios de diciembre 2020. Para más información, véase el enlace.</speak>
           type: ssml
+        - options:
+          - label: Medidas Preventivas
+            value: Medidas Preventivas
+          - label: Nuevas cepas
+            value: Nuevas cepas
+          - label: Vacunas
+            value: tenemos vacunas contra el covid
+          - label: Situación Mundial
+            value: Situación Mundial
+          type: hints
     utter_vocative_call:
     - custom:
         answers:
