--- a/bot/languages/en/domain.yml
+++ b/bot/languages/en/domain.yml
@@ -260,9 +260,92 @@ intents:
   - vaccine_ingredients
   - vaccine_administration
   - covid_new_strain
+  - vaccine_booster
+  - vaccine_mix
+  - covid_delta
+  - covid_after_vaccine
+  - vaccine_with_covid
+  - vaccine_after_covid
+  - covid_after_vaccine
+  - covid_delta
+  - vaccine_mix
+  - vaccine_effectiveness
+  - vaccine_side_effects
+  - vaccine_safety
 
 
 responses:
+  utter_covid_delta:
+    - custom:
+        answers:
+          - type: ssml
+            ssml: <speak>At this time, Delta is the predominant variant of the virus, causing more infections and spreading more rapidly than the earlier types of the virus.</speak>
+          - type: html
+            text: At this time, Delta is the predominant variant of the virus, causing more infections and spreading more rapidly than the earlier types of the virus. <a href='https://www.cdc.gov/coronavirus/2019-ncov/variants/delta-variant.html'target='_blank'>(1)</a>
+  utter_vaccine_with_covid:
+    - custom:
+        answers:
+          - type: ssml
+            ssml: <speak>No. People with Covid 19 who have symptoms should wait to be vaccinated until they have recovered from the disease and meet the criteria to discontinue isolation.
+              People without symptoms should also wait until they meet the criteria for vaccination. This guideline also applies to persons who become ill with Covid 19 before their second dose of the vaccine.</speak>
+          - type: html
+            text: No. People with COVID-19 who have symptoms should wait to be vaccinated until they have recovered from the disease and meet the criteria to discontinue isolation.
+              People without symptoms should also wait until they meet the criteria for vaccination. This guideline also applies to persons who become ill with COVID-19 before their second dose of the vaccine.<a href='https://www.cdc.gov/coronavirus/2019-ncov/vaccines/different-vaccines.html'target='_blank'>(1)</a>
+  utter_vaccine_booster:
+    - custom:
+        answers:
+          - type: ssml
+            ssml: <speak>The goal is for people to start receiving a Covid 19 booster shot beginning in the fall, with individuals being eligible starting 8 months after they received their second dose of an mRNA vaccine (either Pfizer-BioNTech or Moderna).</speak>
+          - type: html
+            text: The goal is for people to start receiving a COVID-19 booster shot beginning in the fall, with individuals being eligible starting 8 months after they received their second dose of an mRNA vaccine (either Pfizer-BioNTech or Moderna). <a href='https://www.cdc.gov/coronavirus/2019-ncov/vaccines/booster-shot.html'target='_blank'>(1)</a>
+  utter_vaccine_effectiveness:
+    - custom:
+        answers:
+          - type: ssml
+            ssml: <speak>The Pfizer Bio N Tech vaccine is 95 per cent effective according to its trial involving about forty three thousand people. The Moderna vaccine has 94 per cent efficacy according to a trial involving more than thirty thousand people, and the Johnson & Johnson vaccine was 66.3 per cent effective in clinical trials.</speak>
+          - type: html
+            text: The Pfizer-BioNTech vaccine is 95% effective according to its trial involving about 43,000 people. The Moderna vaccine has 94% efficacy according to a trial involving more than 30,000 people, and the Johnson & Johnson vaccine was 66.3% effective in clinical trials.<a href='https://www.cdc.gov/coronavirus/2019-ncov/vaccines/effectiveness.html'target='_blank'>(1)</a>
+  utter_covid_after_vaccine:
+    - custom:
+        answers:
+          - type: ssml
+            ssml: <speak>COVID-19 vaccines are effective in preventing infection, serious illness, and death. Most people who become ill with Covid 19 are not vaccinated. 
+              However, since vaccines are not 100 per cent effective in preventing infection, some of those who are fully vaccinated will become infected with Covid 19 anyway. 
+              Vaccinated people who become infected are less likely to suffer severe disease than those who are not vaccinated and become infected with Covid 19.</speak>
+          - type: html
+            text: COVID-19 vaccines are effective in preventing infection, serious illness, and death. Most people who become ill with COVID-19 are not vaccinated. 
+              However, since vaccines are not 100% effective in preventing infection, some of those who are fully vaccinated will become infected with COVID-19 anyway. 
+              Vaccinated people who become infected are less likely to suffer severe disease than those who are not vaccinated and become infected with COVID-19. <a href='https://www.cdc.gov/coronavirus/2019-ncov/vaccines/effectiveness/why-measure-effectiveness.html'target='_blank'>(1)</a>
+  utter_vaccine_safety:
+    - custom:
+        answers:
+          - type: ssml
+            ssml: <speak>Covid 19 vaccines are safe and effective. They prevent infection, serious illness, and death. fore being validated by WHO and national regulatory agencies, they underwent rigorous testing in clinical trials to demonstrate that they meet internationally accepted criteria for efficacy and safety.</speak>
+          - type: html
+            text: COVID-19 vaccines are safe and effective. They prevent infection, serious illness, and death. Before being validated by WHO and national regulatory agencies, they underwent rigorous testing in clinical trials to demonstrate that they meet internationally accepted criteria for efficacy and safety. <a href='https://www.cdc.gov/coronavirus/2019-ncov/vaccines/safety.html'target='_blank'>(1)</a>
+  utter_vaccine_side_effects:
+    - custom:
+        answers:
+          - type: ssml
+            ssml: <speak>As with any vaccine, Covid 19 vaccines can cause side effects. Most vaccine reactions are mild and go away spontaneously within a few days.
+              They include fever, tiredness, headache, myalgia, chills, diarrhea and pain at the injection site. More serious or long-lasting side effects are extremely rare.</speak>
+          - type: html
+            text: As with any vaccine, COVID-19 vaccines can cause side effects. Most vaccine reactions are mild and go away spontaneously within a few days.
+              They include fever, tiredness, headache, myalgia, chills, diarrhea and pain at the injection site. More serious or long-lasting side effects are extremely rare.<a href='https://www.cdc.gov/coronavirus/2019-ncov/vaccines/expect/after.html'target='_blank'>(1)</a>
+  utter_vaccine_after_covid:
+    - custom:
+        answers:
+          - type: ssml
+            ssml: <speak>Even if you have already had Covid 19, you should still get vaccinated when possible. The protection you get from having had Covid 19 varies from person to person and we also do not know how long the natural immunity may last.</speak>
+          - type: html
+            text: Even if you have already had COVID-19, you should still get vaccinated when possible. The protection you get from having had COVID-19 varies from person to person and we also do not know how long the natural immunity may last.<a href='https://www.cdc.gov/coronavirus/2019-ncov/vaccines/different-vaccines.html'target='_blank'>(1)</a>
+  utter_vaccine_mix:
+    - custom:
+        answers:
+          - type: ssml
+            ssml: <speak>Clinical trials are underway in some countries to see if it is possible to receive a first dose of one vaccine and a second dose of a different vaccine. There is not yet enough information to recommend this type of combination.</speak>
+          - type: html
+            text: Clinical trials are underway in some countries to see if it is possible to receive a first dose of one vaccine and a second dose of a different vaccine. There is not yet enough information to recommend this type of combination.<a href='https://www.cdc.gov/coronavirus/2019-ncov/vaccines/different-vaccines.html'target='_blank'>(1)</a>
   utter_command_change_bot:
     - custom:
         answers:
